Fixed vertical alignment bug on question page

--- a/src/Dfc.DiscoverSkillsAndCareers.WebApp/src/scss/_question.scss
+++ b/src/Dfc.DiscoverSkillsAndCareers.WebApp/src/scss/_question.scss
@@ -91,7 +91,6 @@
       flex-direction: column;
 
       h1 {
-        align-self: center;
         margin: auto 0;
       }
 
